fixed images not covering properly on background

--- a/css/index.css
+++ b/css/index.css
@@ -538,6 +538,13 @@
     }
 }
 @media screen and (max-width:475px){
+    .hero_section{
+        background: url(../photos/large/heroimage.jpg) no-repeat center center fixed;
+        background-size: cover;
+    }
+    .donate_section{
+
+    }
     .center_wrap{
         grid-area: 3 / 1 / 6 / 8;
         justify-content: center;
@@ -559,11 +566,15 @@
         padding:1em;
     }
     .text_box h2{
-        font-size: 2.5em;
+        font-size: 2em;
         height:70px;
     }
     .text_box p{
         font-size:1em;
+    }
+    .donate_section{
+        background: url(../photos/large/donate.jpg) no-repeat top center fixed;
+        background-size: cover;
     }
     .donate_section h2{
         font-size: 1.5em;
@@ -588,10 +599,3 @@
         height:40%;
     }
 }
-/* @media screen and (max-height:1010px){
-    .center_wrap{
-        grid-area: 3 / 2 / 6 / 8;
-        justify-content: center;
-        align-items: center;
-    }
-} */
